--- a/ss08_NextJs/bai_tap/my-covid-app/package.json
+++ b/ss08_NextJs/bai_tap/my-covid-app/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
     "next": "14.0.4",
     "react": "^18",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18"
   },
   "devDependencies": {
